objects/ASI_MFM_PP_Category__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_CN_Late_PO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Late PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Department_Attribute__c</fullName>
        <label>Department Attribute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Email_Notification_for_Media__c</fullName>
        <formula>ASI_MFM_Marketing_Category__r.ASI_MFM_Email_Notification_for_Media__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Notification for Media</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_MFM_Global_PP_Category__c</fullName>
        <label>Global PP Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Marketing_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN PP Category</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Market_Strategy__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Marketing Category</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Market_Strategy__c</referenceTo>
        <relationshipLabel>PP Category</relationshipLabel>
        <relationshipName>PP_Category</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PP Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Marketing_Category__c</columns>
        <columns>ASI_MFM_CN_Late_PO__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_MFM_Department_Attribute__c</columns>
        <columns>ASI_MFM_Global_PP_Category__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_PP_Category__c.ASI_MFM_CN_PP_Category</value>
        </filters>
        <filters>
            <field>ASI_MFM_Marketing_Category__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CN_IT_Category</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_MFM_Marketing_Category__c</columns>
        <columns>ASI_MFM_Department_Attribute__c</columns>
        <columns>ASI_MFM_Global_PP_Category__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_PP_Category__c.ASI_MFM_CN_PP_Category</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>capex,opex</value>
        </filters>
        <label>CN IT Category</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CN_Marketing_Category</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_MFM_Department_Attribute__c</columns>
        <columns>ASI_MFM_Global_PP_Category__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_MFM_Marketing_Category__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_PP_Category__c.ASI_MFM_CN_PP_Category</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>capex,opex</value>
        </filters>
        <filters>
            <field>ASI_MFM_Marketing_Category__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>CN Marketing Category</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>PP Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PP Category</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CN_PP_Category</fullName>
        <active>true</active>
        <label>CN PP Category</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>